--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@ignite-ui/react": "^2.2.4",
+    "@prisma/client": "^5.15.0",
+    "@tanstack/react-query": "^5.40.1",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
+    "googleapis": "^140.0.0",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "next-seo": "^6.5.0",
+    "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@rocketseat/eslint-config": "^2.2.2",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "prisma": "^5.13.0",
+    "typescript": "^5"
   }
 }
